syntax = "proto3";

package mpb;

option go_package = "./mpb";

enum ErrCode {
    ERR_OK = 0;
    ERR_CMD = 1;
    ERR_PARAM = 2;
    ERR_DB = 4;
    ERR_CONFIG = 5;
    ERR_MSG_DECODE = 6;
    ERR_TOKEN_VERIFY = 7;
    ERR_WRONG_GATEWAY = 8;
    ERR_REPEATED_REQUEST = 9;
    ERR_UNSUPPORTED_HTTP_CONTENT_TYPE = 10;

    // account
    ERR_ACCOUNT_EXIST = 101;
    ERR_ACCOUNT_NOT_EXIST = 102;
    ERR_PASSWORD = 103;
    ERR_EMAIL_ADDRESS = 104;
    ERR_EMAIL_SEND_MAX = 105;
    ERR_EMAIL_BIND_CODE = 106;
    ERR_EMAIL_BOUND = 107;
    ERR_ACC_BOUND_EMAIL = 108;
    ERR_APTOS_PUBLIC_KEY = 109;
    ERR_APTOS_VERIFY_SIGNATURE = 110;
    ERR_NEW_PASSWD_SAME_WITH_OLD_PASSWD = 111;
    ERR_EMAIL_VERIFICATION_CODE = 112;
    ERR_EMAIL_NOT_EXIST = 113;
    ERR_LOGIN_TOKEN_EXPIRED = 114;

    // item
    ERR_NOT_ENOUGH_MANA = 201;
    ERR_NOT_ENOUGH_ITEM = 202;
    ERR_DUPLICATED_ITEM = 203;
    ERR_ITEM_INVALID = 204;
    ERR_BASE_EQUIP_MAX_STAR = 205;
    ERR_BASE_EQUIP_MAX_LEVEL = 206;

    // nft
    ERR_PARSE_NFT_ID = 301;
    ERR_NFT_TOKEN_ID = 302;
    ERR_NFT_NO_OWNER = 303;
    ERR_NFT_HASH_ID = 304;

    // gm
    ERR_ADMIN_ACCOUNT_OR_PASSWD = 501;

    // apiproxy
    ERR_NO_TELEGRAM_BOT = 601;
    ERR_INVALID_TELEGRAM_CMD = 602;

    // game
    ERR_ENERGY_NOT_ENOUGH = 701;
    ERR_HIDDEN_BOSS_FOUGHT = 702;
    ERR_HIDDEN_BOSS_FIGHT_CD = 703;
    ERR_HIDDEN_BOSS_EXPIRED = 704;
    ERR_NFT_WEAPON_NOT_EQUIPPED = 705;
    ERR_NFT_WEAPON_LEVEL = 706;
    ERR_HIDDEN_BOSS_NOT_FOUND = 707;
    ERR_HIDDEN_BOSS_DIED = 708;
    ERR_NOT_ENOUGH_PVP_CHALLENGE_CNT = 709;
    ERR_PVP_TARGET_RANK_CHANGED = 710;
    ERR_PVP_SETTLE = 711;
    ERR_PVP_CLOSED = 712;
    ERR_BUFF_CARD_STATUS_WRONG = 713;

    // market
    ERR_MAX_ON_SELL_ORDERS = 801;
    ERR_ORDER_CANT_PURCHASE_NOW = 802;
    ERR_ORDER_SOLD_OUT = 803;
    ERR_ORDER_TAKE_OFF = 804;
    ERR_ORDER_NOT_EXIST = 805;

    ERR_UNKNOWN = 9999;

}

message ErrorMsg {
    ErrCode error = 1;
    map<string,string> err_detail = 2;
}